<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/layout_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/toobar_margin_start"
                android:padding="@dimen/toolbar_item_padding"
                android:src="@drawable/ic_cancel_custom_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/abc_cancel"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/toolbar_item_padding"
            android:background="@drawable/custom_ripple"
            android:text="@string/abc_save"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="@dimen/detail_item_pading">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect|textAutoComplete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_item_margin"
                android:text="@string/abc_quantity" />

            <RadioGroup
                android:id="@+id/low_full_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abc_low" />

                <RadioButton
                    android:id="@+id/radio_button_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/abc_full" />
            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_item_margin"
                android:text="@string/abc_category" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_category"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="@dimen/spinner_select_list_max_width"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/image_add_new_category"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/custom_ripple"
                    android:src="@drawable/ic_pencil" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_item_margin">

                <LinearLayout
                    android:id="@+id/layout_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/abc_bought" />


                    <EditText
                        android:id="@+id/edit_created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="Date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_expiration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/layout_created">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/abc_expired" />

                    <EditText
                        android:id="@+id/edit_expiration_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="Day"
                        android:textColor="@color/color_text" />
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/custom_ripple"
            android:text="@string/abc_delete"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/abc_text_size_medium"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>