<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/layout_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/toobar_margin_start"
                android:padding="@dimen/toolbar_item_padding"
                android:src="@drawable/ic_cancel_custom_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/abc_cancel"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/toolbar_item_padding"
            android:background="@drawable/custom_ripple"
            android:text="@string/abc_save"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect|textAutoComplete" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_item_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_multi_list_text_current_color" />

                <View
                    android:id="@+id/view_color"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/colorGreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_item_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping_multi_list_text_choose_color" />

               <Button
                   android:id="@+id/button_change_color"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/shopping_multi_list_text_button"
                   android:textColor="@color/colorWhite"
                   style="@style/AppTheme.Custom.Button"
                   android:layout_marginStart="20dp"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>